colour issue is there

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -17,7 +17,14 @@
         android:id="@+id/btnContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Continue"
+        android:text="Back to Dashboard"
         android:layout_marginTop="24dp"/>
+
+    <Button
+        android:id="@+id/btnNewQuiz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start New Quiz"
+        android:layout_marginTop="16dp"/>
 
 </LinearLayout>
