--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -27,4 +27,12 @@
         android:text="Start New Quiz"
         android:layout_marginTop="16dp"/>
 
+    <Button
+        android:id="@+id/btnLogout"
+        android:text="Logout"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/red"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
