--- a/app/src/main/res/layout/grid_item_topic.xml
+++ b/app/src/main/res/layout/grid_item_topic.xml
@@ -7,7 +7,7 @@
     android:textSize="16sp"
     android:focusable="false"
     android:clickable="false"
-    android:background="@drawable/topic_button_selector"
-    android:textColor="@color/topic_text_selector"
     android:ellipsize="end"
-    android:maxLines="2"/>
+    android:maxLines="2"
+    android:background="@drawable/topic_background_selector"
+    android:textColor="@color/white"/>
