--- a/app/src/main/res/layout/grid_item_topic.xml
+++ b/app/src/main/res/layout/grid_item_topic.xml
@@ -10,4 +10,4 @@
     android:ellipsize="end"
     android:maxLines="2"
     android:background="@drawable/topic_background_selector"
-    android:textColor="@color/white"/>
+    android:textColor="@color/topic_text_selector"/>
